--- a/config.env
+++ b/config.env
@@ -21,10 +21,10 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
 USE_SERVICE_ACCOUNTS = "False"
 # GDrive Tools
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = "False"
+GDRIVE_ID = "1ADZ617uahplLrsUXKluhVuIbRGPZi7DN"
+IS_TEAM_DRIVE = "true"
 STOP_DUPLICATE = "False"
-INDEX_URL = ""
+INDEX_URL = "https://gitlab.com/GoogleDriveIndex/Google-Drive-Index"
 # Rclone
 RCLONE_PATH = ""
 RCLONE_FLAGS = ""
@@ -33,8 +33,8 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://username: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@github.com/esaramadhan/arcadiamltb"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
